# gta-vc-settings

./: .gitignore  .travis.yml  Cargo.toml  README.md  index.html  ouput.set  search-index.js
gta_vc_settings/: enum.SettingsResult.html  index.html  sidebar-items.js  struct.GtaVcSettings.html
implementors/core/fmt/: trait.Debug.js
src/: lib.rs
src/gta_vc_settings/: lib.rs.html
tests/: basicsettings.rs
